--- a/index.html
+++ b/index.html
@@ -50,48 +50,73 @@
 			<div class="col-sm-9">
 				<h2 class="title-customers">My Customers</h2>
 				<h4 class="after-title">You can add your customers</h4>
-				<div class="col-sm-8">
+			<!-- 	<div class="col-sm-8">
 					<h4 class="title-customers">Custumers list<span class="pull-right see-more">See more</span></h4>
 					<div ng-repeat="person in vm.data" class="clearfix col-sm-12 contact">
-						<div class="editing-div">
+						<div ng-if="!vm.editing" class="editing-div">
 							<img ng-src="{{person.img}}" class="pull-left" alt="avatar">
-
-							<div ng-if="!vm.editing" class="left-part">
-								<p class="name-customer">{{person.name}}<i class="material-icons pull-right pencil"
-									ng-click="vm.editList(person)">create</i></p>
-									<p class="address">{{person.address}}<i class="material-icons phone-number">phone</i><span>{{person.phone}}</span></p>
-									<p class="fact-address">{{person.city}}<span class="glyphicon glyphicon glyphicon-envelope" aria-hidden="true"></span><span class="email">{{person.mail}}</span></p>
-								</div>
-
-								<div ng-if="vm.editing">
-									<input type="text" ng-model="person.name"><i class="material-icons pull-right pencil" ng-click="vm.saveEdit()">create</i>
-									<input type="text" ng-model="person.address">
-									<input class="pull-right input-phone" type="text" ng-model="person.phone">
-									<input type="text" ng-model="person.city">
-									<input class="pull-right input-phone" type="text" ng-model="person.mail">
-								</div>
-
+							<div class="left-part">
+								<p class="name-customer">{{person.name}}<i ng-click="vm.editProduct(product)" class="material-icons pull-right pencil"
+								ng-click="vm.editList(person)">create</i></p>
+								<p class="address">{{person.address}}<i class="material-icons phone-number">phone</i><span>{{person.phone}}</span></p>
+								<p class="fact-address">{{person.city}}<span class="glyphicon glyphicon glyphicon-envelope" aria-hidden="true"></span><span class="email">{{person.mail}}</span></p>
 							</div>
 						</div>
 					</div>
+					</div>
+				</div> -->
+				
+				<div class="col-sm-8">
+					<h4 class="title-customers">Custumers list<span class="pull-right see-more">See more</span></h4>
+					<div ng-repeat="person in vm.data" data-ng-class="{danger:!person.active}">
+						<div class="editing-div clearfix">
+							<img ng-src="{{person.img}}" class="pull-left" alt="avatar">
+							<div class="left-part">
+								<p ng-hide="editMode" class="name-customer">{{person.name}}
+									<i class="material-icons pull-right pencil"
+									ng-click="editMode = true">create</i></p>
+									<p ng-hide="editMode" class="address">{{person.address}}<i class="material-icons phone-number">phone</i><span>{{person.phone}}</span></p>
+									<p  ng-hide="editMode" class="fact-address">{{person.city}}<span class="glyphicon glyphicon glyphicon-envelope" aria-hidden="true"></span><span class="email">{{person.mail}}</span></p>
+									
+									<div ng-show="editMode" class="edit-mode">
+										<input type="text" ng-model="person.name"> 
+										<i class="material-icons pull-right pencil"
+										ng-show="editMode" 
+										ng-click="editMode = false">create</i>
+										</br>
+										<input type="text" ng-model="person.address">
+										<input type="text" ng-model="person.phone">
+										<input type="text" ng-model="person.city">
+										<input type="text" ng-model="person.mail">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+
+
+
+
+
+
+				</div>
+				<div class="row">
+					My Search results
+				</div>
+				<div class="row">
+					<footer>Footer</footer>
 				</div>
 			</div>
-			<div class="row">
-				My Search results
-			</div>
-			<div class="row">
-				<footer>Footer</footer>
-			</div>
-		</div>
 
 
 
-		<script src="bower_components\jquery\dist\jquery.min.js"></script>
-		<script src="bower_components\bootstrap\dist\js\bootstrap.min.js"></script>
-		<script src="bower_components\angular\angular.min.js"></script>
-		<script src="scripts/main.js"></script>
-		<script src="scripts/factories/contacts.fac.js"></script>
+			<script src="bower_components\jquery\dist\jquery.min.js"></script>
+			<script src="bower_components\bootstrap\dist\js\bootstrap.min.js"></script>
+			<script src="bower_components\angular\angular.min.js"></script>
+			<script src="scripts/main.js"></script>
+			<script src="scripts/factories/contacts.fac.js"></script>
 
 
-	</body>
-	</html>
+		</body>
+		</html>
